--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/icon.png" alt="" /></span>
 							<h1>upamune</h1>
-							<p>Arch Linux&nbsp;&bull;&nbsp;Golang&nbsp;&bull;&nbsp;NeoVim&nbsp;&bull;&nbsp;PriPara</p>
+							<p>Golang&nbsp;&bull;&nbsp;NeoVim&nbsp;&bull;&nbsp;PriPara</p>
 						</header>
 						<footer>
 							<ul class="icons">
 								<li><a href="https://twitter.com/upamune" class="fa-twitter-square">Twitter</a></li>
 								<li><a href="https://github.com/upamune" class="fa-github-square">GitHub</a></li>
 								<li><a href="https://instagram.com/upamune" class="fa-instagram">Instagram</a></li>
-								<li><a href="http://upamune.hatenablog.com/" class="fa-rss-square">Blog</a></li>
+								<li><a href="http://blog.upamune.com/" class="fa-pencil">Blog</a></li>
+								<li><a href="http://amzn.asia/4EErMQW" class="fa-amazon">WishList</a></li>
 							</ul>
 						</footer>
 					</section>
