--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<meta property="og:type" content="profile" />
   <meta property="og:url" content="https://www.upamune.com" />
   <meta property="og:title" content="upamune.com" />
-  <meta property="og:image" content="http://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" />
+  <meta property="og:image" content="https://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" />
   <meta property="og:description" content="upamune.com" />
   <meta property="og:site_name" content="upamune.com" />
 	<meta name="twitter:card" content="upamune.com" />
 	<meta name="twitter:site" content="@upamune" />
 	<meta name="twitter:title" content="upamune.com" />
 	<meta name="twitter:description" content="upamune.com" />
-	<meta name="twitter:image" content="http://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" />
+	<meta name="twitter:image" content="https://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" />
 	<link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 	<title>upamune.com</title>
 </head>
@@ -25,7 +25,7 @@
 <main>
 	<article>
 		<section>
-			<img src="http://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" alt="mosaic icon">
+			<img src="https://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" alt="mosaic icon">
 		</section>
 		<section>
 			<h2>Name</h2>
