--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
             </section>
             <section>
                 <h2>Instagram</h2>
-                <p><a href="https://instagram/upamune">@upamune</a></p>
+                <p><a href="https://instagram.com/upamune">@upamune</a></p>
             </section>
             <section>
                 <h2>Blog</h2>
-                <p><a href="blog.upamune.com">blog.upamune.com</a></p>
+                <p><a href="http://blog.upamune.com">blog.upamune.com</a></p>
             </section>
             <section>
                 <h2>Diary</h2>
-                <p><a href="diary.upamune.com">diary.upamune.com</a></p>
+                <p><a href="http://diary.upamune.com">diary.upamune.com</a></p>
             </section>
             <section>
                 <h2>WishList</h2>
