--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 <p><a href="http://diary.upamune.com">diary.upamune.com</a></p>
             </section>
             <section>
+                <h2>Ownd</h2>
+                <p><a href="http://ownd.upamune.com">ownd.upamune.com</a></p>
+            </section>
+            <section>
                 <h2>WishList</h2>
                 <p><a href="http://amzn.asia/4EErMQW">amzn.asia/4EErMQW</a></p>
             </section>
