--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
     </main>
     <footer>&copy;upamune <span id="year"></span></footer>
     <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64589900-2', 'auto');
+  ga('send', 'pageview');
+
+    </script>
+    <script>
         document.addEventListener("DOMContentLoaded", function() {
             document.getElementById("year").textContent = new Date().getFullYear();
         });
