--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <li>DevOps</li>
                     <li>PriPara</li>
                     <li>i☆Ris</li>
+                    <li>大戸屋</li>
                 </ul>
             </section>
             <section>
