--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                 <p><a href="http://diary.upamune.com">diary.upamune.com</a></p>
             </section>
             <section>
+                <h2>Medium</h2>
+                <p><a href="https://medium.com/@upamune">@upamune</a></p>
+            </section>
+            <section>
                 <h2>Ownd</h2>
                 <p><a href="http://ownd.upamune.com">ownd.upamune.com</a></p>
             </section>
