--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
                 <p><a href="http://amzn.asia/4EErMQW">amzn.asia/4EErMQW</a></p>
             </section>
             <section>
+                <h2>Freewallet</h2>
+                <p><a href="https://freewallet.org/id/serizawa">serizawa</a></p>
+            </section>
+            <section>
                 <h2>Coincheck</h2>
                 <p>145eM1ucS5JPxhfsFrB3tY8xo8Fzn52tYZ</p>
                 <img src="./img/qr.png" alt="145eM1ucS5JPxhfsFrB3tY8xo8Fzn52tYZ">
