Replace upamune.com

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:type" content="profile" />
-    <meta property="og:url" content="https://www.upamune.com" />
-    <meta property="og:title" content="upamune.com" />
+    <meta property="og:url" content="https://www.serizawa.me" />
+    <meta property="og:title" content="serizawa.me" />
     <meta property="og:image" content="https://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" />
-    <meta property="og:description" content="upamune.com" />
-    <meta property="og:site_name" content="upamune.com" />
-    <meta name="twitter:card" content="upamune.com" />
+    <meta property="og:description" content="serizawa.me" />
+    <meta property="og:site_name" content="serizawa.me" />
+    <meta name="twitter:card" content="serizawa.me" />
     <meta name="twitter:site" content="@upamune" />
-    <meta name="twitter:title" content="upamune.com" />
-    <meta name="twitter:description" content="upamune.com" />
+    <meta name="twitter:title" content="serizawa.me" />
+    <meta name="twitter:description" content="serizawa.me" />
     <meta name="twitter:image" content="https://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" />
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
-    <title>upamune.com</title>
+    <title>serizawa.me</title>
 </head>
 
 <body>
@@ -64,19 +64,11 @@
             </section>
             <section>
                 <h2>Blog</h2>
-                <p><a href="http://blog.upamune.com">blog.upamune.com</a></p>
-            </section>
-            <section>
-                <h2>Diary</h2>
-                <p><a href="http://diary.upamune.com">diary.upamune.com</a></p>
+                <p><a href="http://blog.serizawa.me">blog.serizawa.me</a></p>
             </section>
             <section>
                 <h2>Medium</h2>
                 <p><a href="https://medium.com/@upamune">@upamune</a></p>
-            </section>
-            <section>
-                <h2>Ownd</h2>
-                <p><a href="http://ownd.upamune.com">ownd.upamune.com</a></p>
             </section>
             <section>
                 <h2>WishList</h2>
