--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </section>
             <section>
                 <h2>WishList</h2>
-                <p><a href="http://amzn.asia/4EErMQW">amzn.asia/4EErMQW</a></p>
+                <p><a href="http://amzn.asia/dsOIDbg">amzn.asia/dsOIDbg</a></p>
             </section>
             <section>
                 <h2>Freewallet</h2>
