--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <section>
                 <h2>Name</h2>
                 <p>Yu SERIZAWA</p>
+            </section>
+            <section>
                 <h2>Email</h2>
                 <p>yu@serizawa.me</p>
             </section>
