--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
                             <li>Enginner</li>
                         </ul>
                     </li>
+                    <li>2018/4~
+                        <ul>
+                            <li>merpay, Inc</li>
+                            <li>Backend Engineer</li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
             <section>
