--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta property="og:type" content="profile" />
     <meta property="og:url" content="https://www.serizawa.me" />
     <meta property="og:title" content="serizawa.me" />
-    <meta property="og:image" content="https://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" />
+    <meta property="og:image" content="https://www.gravatar.com/avatar/daca40939cd8f3e1080c6a58e0d698fb" />
     <meta property="og:description" content="serizawa.me" />
     <meta property="og:site_name" content="serizawa.me" />
     <meta name="twitter:card" content="serizawa.me" />
     <meta name="twitter:site" content="@upamune" />
     <meta name="twitter:title" content="serizawa.me" />
     <meta name="twitter:description" content="serizawa.me" />
-    <meta name="twitter:image" content="https://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" />
+    <meta name="twitter:image" content="https://www.gravatar.com/avatar/daca40939cd8f3e1080c6a58e0d698fb" />
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
     <title>serizawa.me</title>
 </head>
@@ -27,7 +27,7 @@
     <main>
         <article>
             <section>
-                <img src="https://www.gravatar.com/avatar/2709e9b504d8fbaf78ad53866a926e68?s=150" alt="mosaic icon">
+                <img src="https://www.gravatar.com/avatar/daca40939cd8f3e1080c6a58e0d698fb?s=150" alt="mosaic icon">
             </section>
             <section>
                 <h2>Name</h2>
