--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <article>
             <section>
-                <img src="https://www.gravatar.com/avatar/daca40939cd8f3e1080c6a58e0d698fb?s=150" alt="mosaic icon">
+                <img style="border-radius: 50%;" src="https://www.gravatar.com/avatar/daca40939cd8f3e1080c6a58e0d698fb?s=150" alt="mosaic icon">
             </section>
             <section>
                 <h2>Name</h2>
